Fixes too much space while on mobile web (#536)
Fixes too much space while on mobile web.

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/536
Co-committed-by: I am Fastidious <fastidious@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -479,7 +479,7 @@ footer .footer-menu a:last-child::after{
     display: inline;
   }
   .u-author.h-card{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .u-author.h-card>div{
     flex: 20%;
